0.83.7
  - Implemented the x86 dynamic core for both 32-bit
    and 64-bit systems by re-porting the code from SVN.
    Dynamic core now supports either the dynamic_x86
    or the dynamic_rec core. The dynamic_x86 core will
    be used by default for x86 and x86_64 platforms and
    if "core=dynamic" is set, and Windows 9x can be run
    in this dynamic core. You can also explicit specify
    "core=dynamic_x86" or "core=dynamic_rec" for either
    the dynamic_x86 core or the dynamic_rec core. Also
    thank joncampbell123 for the 64-bit fix. (Wengier)
  - Save state feature now allows users to optionally
    enter remarks when saving a state. A toggle menu
    item "No remark when saving state" (in "Capture")
    is added to disable input of remarks. (Wengier)
  - DOSBox-X will now use native dialog box to display
    quit warnings and save state errors. (Wengier)
  - Updated the Windows installer to default to the
    "typical" installation. For the full installation
    start menu items will be added for DOSBox-X builds
    copied to subdirectories. (Wengier)
  - Improved Flatpak support for Linux. (rderooy)
  - Fixed shelling from programs may not work when the
    shell config option is set. (Wengier)
  - Added support for the XDG_DATA_HOME environment
    variable for config directory in Linux. (rderooy)
  - Added support for compiling with pcap for Windows
    MinGW builds. (Jookia)
  - Added config option "windowposition" (in [sdl]
    section) to set the window position at startup in
    the positionX,positionY format. (tomba4)
  - Added config option "raw_mouse_input" (in [sdl]
    section; SDL2 builds only) to bypass the operating
    system's mouse acceleration & sensitivity settings.
    Implemented by NicknineTheEagle.
  - Integrated SVN commits (Allofich)
    - r4371: Fix regression in Clue: Master Detective.
    - r4370: As an adjunct to r4369, make the reference
      counts of standard device handles equivalent to
      those of real DOS.