@@ -35,7 +35,7 @@ void Mouse_ChangePS2Callback(uint16_t pseg, uint16_t pofs);
 
 
 void Mouse_CursorMoved(float xrel,float yrel,float x,float y,bool emulate);
-#if defined(WIN32)
+#if defined(WIN32) || defined(C_SDL2)
 const char* Mouse_GetSelected(int x1, int y1, int x2, int y2, int w, int h, uint16_t *textlen);
 void Mouse_Select(int x1, int y1, int x2, int y2, int w, int h);
 void Restore_Text(int x1, int y1, int x2, int y2, int w, int h);
